# proxmux

./: .changelog-config.yaml  .gitignore  .pylintrc  CHANGELOG.md  install.sh  pyproject.toml
.github/actions/package-and-upload-artifacts/: action.yml
.github/actions/setup-python-and-git/: action.yaml
.github/workflows/: publish.yml  pylint.yml  release.yml  version-preview.yaml
proxmux/: cli.py  discover.py  htmlgen.py  updates.py  utils.py
